engine/src/R3E/j3x/tests/good/3.j3x
string a = "some string"

list b = [a; "some other string"; "maybe next"]
list empty = []

list nonempty = [["one string"]; ["two strings"; a]; empty]
